udpated comments and desc

--- a/PyConID_PyTorch_Hook.ipynb
+++ b/PyConID_PyTorch_Hook.ipynb
@@ -11,79 +11,77 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 12,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ./data/cifar-10-python.tar.gz\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 170498071/170498071 [00:03<00:00, 46023287.02it/s]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Extracting ./data/cifar-10-python.tar.gz to ./data\n",
-            "Files already downloaded and verified\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
         "import torch.optim as optim\n",
         "import torchvision\n",
-        "import torchvision.transforms as transforms\n",
-        "\n",
-        "# Load the CIFAR-10 dataset and define data transformations\n",
-        "transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.4914, 0.4822, 0.4465), (0.247, 0.243, 0.261))])\n",
-        "trainset = torchvision.datasets.CIFAR10(root='./data', train=True, download=True, transform=transform)\n",
-        "trainloader = torch.utils.data.DataLoader(trainset, batch_size=32, shuffle=True)\n",
-        "testset = torchvision.datasets.CIFAR10(root='./data', train=False, download=True, transform=transform)\n",
-        "testloader = torch.utils.data.DataLoader(testset, batch_size=32, shuffle=True)\n"
+        "import torchvision.transforms as transforms"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "l3p9HjUAqj7d"
-      },
+      "metadata": {},
       "source": [
-        "### Training Phase"
+        "### Preparing dataset"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZV0KIlWX8oeo",
-        "outputId": "95fc6444-2e60-4c2e-ee80-7cba84aee1bb"
-      },
+      "execution_count": 13,
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch 1, Loss: 1.641421895872227\n",
-            "Epoch 2, Loss: 1.2879533700583001\n",
-            "Epoch 3, Loss: 1.1750398684753032\n",
-            "Epoch 4, Loss: 1.090450172079578\n",
-            "Epoch 5, Loss: 1.0183437143810574\n",
-            "Training finished!\n"
+            "Files already downloaded and verified\n",
+            "Files already downloaded and verified\n"
           ]
+        }
+      ],
+      "source": [
+        "# define transformation function for dataset\n",
+        "transform = transforms.Compose([transforms.ToTensor(),\n",
+        "                                transforms.Normalize((0.4914, 0.4822, 0.4465), (0.247, 0.243, 0.261))])\n",
+        "\n",
+        "# Load the CIFAR-10 dataset and define data transformations (dataset will be downloaded automatically if not present)\n",
+        "trainset = torchvision.datasets.CIFAR10(root='./data', train=True, download=True, transform=transform)\n",
+        "trainloader = torch.utils.data.DataLoader(trainset, batch_size=32, shuffle=True)\n",
+        "testset = torchvision.datasets.CIFAR10(root='./data', train=False, download=True, transform=transform)\n",
+        "testloader = torch.utils.data.DataLoader(testset, batch_size=32, shuffle=True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Defining the model architecture"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "SimpleCNN(\n",
+              "  (conv1): Conv2d(3, 16, kernel_size=(3, 3), stride=(1, 1))\n",
+              "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+              "  (fc1): Linear(in_features=3600, out_features=64, bias=True)\n",
+              "  (fc2): Linear(in_features=64, out_features=10, bias=True)\n",
+              ")"
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -103,24 +101,63 @@
         "        x = self.fc2(x)\n",
         "        return x\n",
         "\n",
-        "# Initialize the model, loss function, and optimizer\n",
+        "# Initialize the model\n",
         "net = SimpleCNN()\n",
-        "net.to(\"cuda\")\n",
+        "net.to(\"cuda\") # move the model to GPU"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "l3p9HjUAqj7d"
+      },
+      "source": [
+        "### Training Phase"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZV0KIlWX8oeo",
+        "outputId": "95fc6444-2e60-4c2e-ee80-7cba84aee1bb"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 1, Loss: 1.6852942557191513\n",
+            "Epoch 2, Loss: 1.2863099461019765\n",
+            "Epoch 3, Loss: 1.1513892265366805\n",
+            "Epoch 4, Loss: 1.055342442624781\n",
+            "Epoch 5, Loss: 0.9774943913547031\n",
+            "Training finished!\n"
+          ]
+        }
+      ],
+      "source": [
+        "# define loss function and optimizer\n",
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)\n",
         "\n",
-        "# Training the model\n",
-        "for epoch in range(5):  # Loop over the dataset multiple times\n",
+        "# Train the model (5 epochs)\n",
+        "for epoch in range(5):  \n",
         "    running_loss = 0.0\n",
-        "    for inputs, labels in trainloader:\n",
-        "        inputs = inputs.to(\"cuda\")\n",
-        "        labels = labels.to(\"cuda\")\n",
-        "        outputs = net(inputs)\n",
-        "        loss = criterion(outputs, labels)\n",
-        "        loss.backward()\n",
-        "        optimizer.step()\n",
-        "        optimizer.zero_grad()\n",
-        "        running_loss += loss.item()\n",
+        "    for inputs, labels in trainloader: # loop over the dataset\n",
+        "        inputs = inputs.to(\"cuda\") # move the input to GPU \n",
+        "        labels = labels.to(\"cuda\") # move the label to GPU\n",
+        "\n",
+        "        outputs = net(inputs) # forward propagation\n",
+        "        loss = criterion(outputs, labels) # compute loss\n",
+        "\n",
+        "        loss.backward() # backpropagation\n",
+        "        optimizer.step() # update the parameters\n",
+        "        optimizer.zero_grad() # reset the gradients\n",
+        "        running_loss += loss.item() # accumulate the loss (for logging purpose)\n",
         "\n",
         "    print(f\"Epoch {epoch + 1}, Loss: {running_loss / len(trainloader)}\")\n",
         "\n",
@@ -138,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -151,25 +188,27 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Correctly predict 6082 of 10,000 (Acc: 60.81999999999999%)\n"
+            "Correctly predict 6220 of 10,000 (Acc: 62.2%)\n"
           ]
         }
       ],
       "source": [
         "def eval(model, testloader):\n",
-        "    # Testing the model\n",
         "    correct = 0\n",
-        "    model.eval()\n",
-        "    with torch.no_grad():\n",
-        "        for inputs, labels in testloader:\n",
-        "            inputs = inputs.to(\"cuda\")\n",
-        "            labels = labels.to(\"cuda\")\n",
-        "            outputs = model(inputs)\n",
+        "    model.eval() # set the model to evaluation mode\n",
+        "    with torch.no_grad(): # turn off the gradient computation\n",
+        "        for inputs, labels in testloader: # loop over the dataset\n",
+        "            inputs = inputs.to(\"cuda\") # move the input to GPU\n",
+        "            labels = labels.to(\"cuda\") # move the label to GPU\n",
+        "\n",
+        "            outputs = model(inputs) # forward propagation\n",
+        "\n",
+        "            # one-liner to compute the number of correct predictions\n",
         "            correct += sum(torch.argmax(outputs, dim=1)==labels).cpu().item()\n",
         "    return correct\n",
         "\n",
         "correct = eval(net, testloader)\n",
-        "print(f\"Correctly predict {correct} of 10,000 (Acc: {correct/10000*100}%)\")"
+        "print(f\"Correctly predict {correct} of 10,000 (Acc: {correct/10000*100}%)\") # 10,000 is the number of eval data"
       ]
     },
     {
@@ -183,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -210,19 +249,18 @@
         "from PIL import Image\n",
         "\n",
         "def predict(model, image):\n",
-        "    # Make predictions, dont forget to preprocess the image\n",
-        "    model.eval()\n",
-        "    with torch.no_grad():\n",
-        "        image = transform(image).to(\"cuda\").unsqueeze(0)\n",
-        "        outputs = model(image)\n",
-        "        _, predicted = torch.max(outputs, 1)\n",
+        "    model.eval() # set the model to evaluation mode\n",
+        "    with torch.no_grad(): # turn off the gradient computation\n",
+        "        image = transform(image).to(\"cuda\").unsqueeze(0) # apply the transformation and move the input to GPU\n",
+        "        outputs = model(image) # forward propagation\n",
+        "        _, predicted = torch.max(outputs, 1) # get the predicted class\n",
         "    return predicted.item()\n",
         "\n",
         "# Define class labels for CIFAR-10\n",
         "classes = ('plane', 'car', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck')\n",
         "\n",
-        "image = Image.open(\"cat9.png\")\n",
-        "predicted = predict(net, image)\n",
+        "image = Image.open(\"cat9.png\") # load the image\n",
+        "predicted = predict(net, image) # predict the class\n",
         "\n",
         "plt.figure(figsize = (2,2))\n",
         "plt.imshow(image)\n",
@@ -240,8 +278,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Load the model"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 18,
       "metadata": {
         "id": "yBg_MxdR88lR"
       },
@@ -252,7 +297,7 @@
               "<All keys matched successfully>"
             ]
           },
-          "execution_count": 35,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -260,10 +305,10 @@
       "source": [
         "from resnet_cifar10 import *\n",
         "\n",
-        "net = resnet20()\n",
-        "net.to(\"cuda\")\n",
+        "net = resnet20() # initialize the model \n",
+        "net.to(\"cuda\") # move the model to GPU\n",
         "\n",
-        "# load pretrained model\n",
+        "# load pretrained model weights\n",
         "net.load_state_dict(torch.load(\"resnet20-0.pt\"))"
       ]
     },
@@ -276,7 +321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -306,15 +351,20 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Sample #1:\n",
-        "Let's print the input and output size for each layer.\n",
+        "### Example #1:\n",
+        "Let's print the input and output size for each layer. Here, we will use forward hook attached to all layers\n",
         "\n",
-        "Hook works like a \"hook\", you put an additional function to a tensor/module of a model. So, if you run the cell below twice, you will  put two functions in the tensor/module. If you want to reset it, you can reload the model (two cells above) or just keep reading"
+        "Visualization:\n",
+        "\n",
+        "<img src=\"images/hook-1.png\" width=\"300\"/>\n",
+        "\n",
+        "---\n",
+        "**Note**: hook works like a \"hook\", you put an additional function to a tensor/module of a model. So, if you run the cell below twice, you will  put two functions in the tensor/module. If you want to reset it, you can reload the model (two cells above) or just keep reading"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 20,
       "metadata": {
         "id": "PgkVcjGV8_ol"
       },
@@ -471,15 +521,16 @@
         }
       ],
       "source": [
-        "def hook(module, inp, out):\n",
-        "    with torch.no_grad():\n",
-        "        print(\"=======\")\n",
-        "        print(\"module: \", module.__class__.__name__)\n",
-        "        print(\"input: \", inp[0].shape, \" | output: \", out.shape)\n",
+        "def hook(module, inp, out): # hook function\n",
+        "    print(\"=======\")\n",
+        "    print(\"module: \", module.__class__.__name__)\n",
+        "    print(\"input: \", inp[0].shape, \" | output: \", out.shape)\n",
         "\n",
-        "for name, module in net.named_modules():\n",
+        "\n",
+        "for name, module in net.named_modules(): # loop over all modules in the model\n",
         "    if len(list(module.children()))==0: # if module is leaf (a layer)\n",
         "        module.register_forward_hook(hook) # registering hook!!\n",
+        "\n",
         "\n",
         "image = Image.open(\"cat9.png\")\n",
         "predicted = predict(net, image)"
@@ -490,6 +541,7 @@
       "metadata": {},
       "source": [
         "The cell below will iterate all modules and print the registered forward hook. If there is a hook in it, it will print \"hook\".\n",
+        "\n",
         "Remember, a module is not the same with a layer. In previous cell, we only register hook to layers"
       ]
     },
@@ -568,8 +620,8 @@
       ],
       "source": [
         "def show_hooks(net):\n",
-        "    for name, module in net.named_modules():\n",
-        "        print(module.__class__.__name__, \" : \", [ v.__name__ for _,v in module._forward_hooks.items()])\n",
+        "    for name, module in net.named_modules(): # loop over all modules in the model\n",
+        "        print(module.__class__.__name__, \" : \", [ v.__name__ for _,v in module._forward_hooks.items()]) # print the hook function name\n",
         "\n",
         "show_hooks(net)"
       ]
@@ -668,8 +720,8 @@
         "from typing import Dict, Callable\n",
         "\n",
         "def clear_hooks(net):\n",
-        "    for name, module in net.named_modules():\n",
-        "        module._forward_hooks:Dict[int, Callable] = OrderedDict()\n",
+        "    for name, module in net.named_modules(): # loop over all modules in the model\n",
+        "        module._forward_hooks:Dict[int, Callable] = OrderedDict() # clear all hooks\n",
         "\n",
         "clear_hooks(net)\n",
         "show_hooks(net)"
@@ -679,7 +731,20 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Sample #2"
+        "## Example #2"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In this example we will use hook to visualize intermediate output of neural network model.\n",
+        "\n",
+        "we will use forward hook attached only to conv layers\n",
+        "\n",
+        "Visualization:\n",
+        "\n",
+        "<img src=\"images/hook-2.png\" width=\"300\"/>"
       ]
     },
     {
@@ -691,22 +756,22 @@
         "from resnet_cifar10 import *\n",
         "\n",
         "intermediate_outputs = []\n",
+        "\n",
+        "# reload the model just for convenience\n",
         "net = resnet20()\n",
         "net.to(\"cuda\")\n",
-        "\n",
-        "# load pretrained model\n",
         "net.load_state_dict(torch.load(\"resnet20-0.pt\"))\n",
         "\n",
-        "def hook(module, inp, out):\n",
+        "def hook(module, inp, out): # hook function\n",
         "    with torch.no_grad():\n",
-        "        intermediate_outputs.append(out.detach())\n",
+        "        intermediate_outputs.append(out.detach()) # save the intermediate output\n",
         "\n",
-        "for name, module in net.named_modules():\n",
+        "for name, module in net.named_modules(): # loop over all modules in the model\n",
         "    if 'conv' in name:\n",
         "        module.register_forward_hook(hook) # registering hook!!\n",
         "\n",
-        "image = Image.open(\"cat9.png\")\n",
-        "predicted = predict(net, image)"
+        "image = Image.open(\"cat9.png\") # load the image\n",
+        "predicted = predict(net, image) # pass the input through the model and save the intermediate output"
       ]
     },
     {
@@ -726,7 +791,7 @@
         }
       ],
       "source": [
-        "# visualize first 10 intermediate outputs in 2x5 grids\n",
+        "# visualize first 5 intermediate outputs\n",
         "fig = plt.figure(figsize=(10, 4))\n",
         "for i in range(5):\n",
         "    ax = fig.add_subplot(1, 5, i+1)\n",
@@ -742,9 +807,20 @@
         "id": "f51W8vJL9Aav"
       },
       "source": [
-        "# Triple Modular Redundancy\n",
+        "# Use Case: Triple Modular Redundancy"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**What is Triple Modular Redundancy?**\n",
         "\n",
-        "Create a layer-level TMR for a model"
+        "Enhance model reliability by run 3 models instead of 1\n",
+        "\n",
+        "<img src=\"images/tmr.png\" width=\"100\"/>\n",
+        "\n",
+        "If there is an inconcistency, pick the majority"
       ]
     },
     {
@@ -757,7 +833,7 @@
       "source": [
         "import copy \n",
         "\n",
-        "class TMRmodel(nn.Module):\n",
+        "class TMRmodel(nn.Module): # Create a model as a wrapper of the original model\n",
         "    \n",
         "    def __init__(self, model):\n",
         "        \n",
@@ -775,7 +851,7 @@
         "                    self.backup2[name] = copy.deepcopy(module)\n",
         "                module.register_forward_hook(self.tmrhook())\n",
         "\n",
-        "    def tmrhook(self):\n",
+        "    def tmrhook(self): # create a hook function. This hook will compare the output of the main model and the backup model for each layer\n",
         "        def hook(module, inp, out_main):\n",
         "            with torch.no_grad():\n",
         "                if self.protected:\n",
@@ -831,10 +907,12 @@
         }
       ],
       "source": [
+        "# load the model\n",
         "net = resnet20()\n",
         "net.to(\"cuda\")\n",
         "net.load_state_dict(torch.load(\"resnet20-0.pt\"))\n",
         "\n",
+        "# wrap the model\n",
         "tmrnet = TMRmodel(net)\n",
         "tmrnet.to(\"cuda\")\n",
         "\n",
