--- a/PyConID_PyTorch_Hook.ipynb
+++ b/PyConID_PyTorch_Hook.ipynb
@@ -838,29 +838,30 @@
         "    def __init__(self, model):\n",
         "        \n",
         "        super(TMRmodel, self).__init__()\n",
-        "        self.model = copy.deepcopy(model)\n",
-        "        self.backup1 = nn.ParameterDict()\n",
-        "        self.backup2 = nn.ParameterDict()\n",
+        "        self.model = copy.deepcopy(model) # the main model\n",
+        "        self.backup1 = nn.ParameterDict() # the backup model 1\n",
+        "        self.backup2 = nn.ParameterDict() # the backup model 2\n",
         "\n",
         "        self.protected = False\n",
         "        for name, module in self.model.named_modules():\n",
         "            if len(list(module.children()))==0:\n",
-        "                module.__name__ = name\n",
+        "                module.__name__ = name # set the name of the module for convenience\n",
         "                with torch.no_grad():\n",
-        "                    self.backup1[name] = copy.deepcopy(module)\n",
-        "                    self.backup2[name] = copy.deepcopy(module)\n",
-        "                module.register_forward_hook(self.tmrhook())\n",
+        "                    self.backup1[name] = copy.deepcopy(module) # back up model is only list of modules\n",
+        "                    self.backup2[name] = copy.deepcopy(module) \n",
+        "                module.register_forward_hook(self.tmrhook()) # registering hook!!\n",
         "\n",
-        "    def tmrhook(self): # create a hook function. This hook will compare the output of the main model and the backup model for each layer\n",
+        "    def tmrhook(self): # create a hook function. This hook will compare the output of the main and the backup model for each layer\n",
         "        def hook(module, inp, out_main):\n",
         "            with torch.no_grad():\n",
-        "                if self.protected:\n",
+        "                if self.protected: # protection switch\n",
         "                    module_1 = self.backup1[module.__name__].eval()\n",
         "                    module_2 = self.backup2[module.__name__].eval()\n",
         "                    \n",
-        "                    out_backup_1 = module_1(inp[0])\n",
-        "                    out_backup_2 = module_2(inp[0])\n",
+        "                    out_backup_1 = module_1(inp[0]) # run the backup model 1\n",
+        "                    out_backup_2 = module_2(inp[0]) # run the backup model 2\n",
         "                    \n",
+        "                    # compare the output of the main and the backup model\n",
         "                    out_correct = None # correct output\n",
         "                    flag = 0 # check error\n",
         "                    if torch.allclose(out_main, out_backup_1, equal_nan=True):\n",
@@ -875,7 +876,8 @@
         "                            out_correct = out_main\n",
         "                            if not torch.allclose(out_main, out_backup_2, equal_nan=True):\n",
         "                                flag += 4\n",
-        "\n",
+        "                                \n",
+        "                    # recover the model\n",
         "                    if flag==1: # error in main module\n",
         "                        module = copy.deepcopy(module_1)\n",
         "                    elif flag==3: # error in model_backup_1\n",
@@ -888,7 +890,7 @@
         "                    return out_correct \n",
         "        return hook\n",
         "\n",
-        "    def forward(self, x):\n",
+        "    def forward(self, x): # forward function only run the main model\n",
         "        out = self.model(x)\n",
         "        return out"
       ]
@@ -926,6 +928,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# break a layer\n",
         "with torch.no_grad():\n",
         "    tmrnet.model.conv1.weight.copy_(torch.randn_like(net.conv1.weight))"
       ]
@@ -944,6 +947,7 @@
         }
       ],
       "source": [
+        "# prediction using the broken model\n",
         "correct = eval(tmrnet, testloader)\n",
         "print(f\"Correctly predict {correct} of 10,000 (Acc: {correct/10000*100}%)\")"
       ]
@@ -962,7 +966,7 @@
         }
       ],
       "source": [
-        "tmrnet.protected = True\n",
+        "tmrnet.protected = True # turn on protection\n",
         "correct = eval(tmrnet, testloader)\n",
         "print(f\"Correctly predict {correct} of 10,000 (Acc: {correct/10000*100}%)\")"
       ]
