--- a/PyConID_PyTorch_Hook.ipynb
+++ b/PyConID_PyTorch_Hook.ipynb
@@ -824,6 +824,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Wrap the model"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 42,
       "metadata": {
@@ -833,7 +840,7 @@
       "source": [
         "import copy \n",
         "\n",
-        "class TMRmodel(nn.Module): # Create a model as a wrapper of the original model\n",
+        "class TMRmodel(nn.Module): # Create a new module that will be used as a wrapper for the main model\n",
         "    \n",
         "    def __init__(self, model):\n",
         "        \n",
@@ -896,6 +903,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Initiate the model"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 43,
       "metadata": {},
@@ -923,14 +937,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Break the model"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 44,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# break a layer\n",
+        "# break a single conv layer by randomizing the weight\n",
         "with torch.no_grad():\n",
         "    tmrnet.model.conv1.weight.copy_(torch.randn_like(net.conv1.weight))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Evaluation"
       ]
     },
     {
